--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -3,22 +3,25 @@
   <div class="form-group">
     <%= label_tag :category %>
     <%= text_field_tag :category, @product.category, class: 'form-control' %>
-  <div>
+  </div>
   <div class="form-group">
     <%= label_tag :name %>
     <%= text_field_tag :name , @product.name , class: 'form-control' %>
-  <div>
+  </div>
   <div class="form-group">
     <%= label_tag :price %>
     <%= text_field_tag :price, @product.price, class: 'form-control' %>
-  <div>
-  <div class="form-group">
-    <%= label_tag :image %>
-    <%= text_field_tag :image , @product.image, class: 'form-control' %>
-  <div>
+  </div>
+  <% @product.images.each do |image| %>
+    <div class="form-group">
+      <%= label_tag :image %>
+      <div><%= image_tag image.image_file %> </div>
+      <%= text_field_tag :image , image.image_file , class: 'form-control' %>
+    </div>
+  <% end %>
   <div class="form-group">
     <%= label_tag :description %>
     <%= text_field_tag :description , @product.description, class: 'form-control' %>
-  <div>
+  </div>
   <%= submit_tag "Update product", class: "btn btn-primary" %>  
 <% end %>
