--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,6 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort Orders<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -46,15 +44,22 @@
           <% end %>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/products?discount=true">Discounted items</a></li>
-          <li><a href="/products/random">Random Items</a></li>
+          <% if current_user %>
+            <li><a href="#">Welcome <%= current_user.name %></a></li>
+            <li><a href="/logout">Logout</a></li>  
+          <% else %>
+            <li><a href="/signup">Sign Up</a></li>        
+            <li><a href="/login">Login</a></li>        
+          <% end %>
+          <li><a href="/products?discount=true">Discounted</a></li>
+          <li><a href="/products/random">Random</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
   <div class="container">
 
-    <div style="margin-top:100px">
+    <div style="margin-top:20px">
       <% flash.each do |name, message| %>
       <div class="alert alert-warning alert-dismissible fade in" role="alert" style="margin-top: 100px">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
