--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,24 +1,24 @@
 <div class="container">
 
   <div>
-    <h3 style="color:steelblue">Order</h3> 
+    <h2 style="color:steelblue">Order Confirmation</h2> 
   </div>
+
+
   <div>
     <h4><%= current_user.name %></h4>
-    <h4><%= current_user.email %></h4>
-    <h4>Order ID:  <%= @order.id %></h4>
-    <%= image_tag @product.images.first.image_file %> 
-    <h4>Product Name: <%= @product.name %></h4>
-    <h4>Product ID: <%= @order.product_id %></h4>
-    <h4>Quantity: <%= @order.quantity %></h4>
-    <h4>Subtotal: <%= @order.subtotal %></h4>
-    <h4>Tax: <%= @order.tax %></h4>
-    <h4>Total: <%= @order.total %></h4>
+    <h5><%= current_user.email %></h5>
 
+    <% @ordered_items.each do |item| %>
+      <div class="col-sm-2 col-lg-2 col-md-2" style="margin-top:20px, clear:both">
+        Product Name: <%= item.product.name %>
+      </div>
+      <div class="col-sm-10 col-lg-10 col-md-10">
+        Quantity <%= item.quantity %>
+      </div>
+    <% end %>
   </div>
 
-  <div>
-    <a href='/products'>Back to main page</a>
-  </div>
-
+  <p><a href='/products'>Back to main page</a></p>
+  
 </div>
